--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ dependencies = [
     "nonebot2>=2.3.0",
     "nonebot-plugin-alconna>=0.52.0",
     "aiohttp>=3.9.5",
-    "soundfile>=0.12.1",
+    "pydub>=0.25.1",
 ]
 requires-python = ">=3.9"
 readme = "README.md"
